--- a/src/css/style.css
+++ b/src/css/style.css
@@ -2,8 +2,26 @@
     box-sizing: border-box;
 }
 body{
+  
+}
+
+.nav-bar{
+    background: #8ccfc1;
     display: flex;
-    align-items: center;
-    justify-content: center;
-    min-height: 100vh;
+    justify-content: space-between;
+    padding: 1rem;
+    width: 100%;
+}
+.App{
+    display: flex;
+    flex-wrap: wrap;
+}
+
+
+.item{
+    width:10rem;
+    height: 10rem;
+    background:#0f0;
+    margin:3px;
+    padding:5px;
 }
